--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,7 @@
 ---
 import "../styles/global.scss";
+
+import Header2 from "../components/Header2.astro"
 ---
 
 <html lang="en">
@@ -15,6 +17,7 @@ import "../styles/global.scss";
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     </head>
     <body>
+        <Header2 />
         <slot/>
     </body>
 </html>
