Hook up red flags

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,7 @@ import Header2 from "../components/Header2.astro"
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>My Astro Site</title>
+        <title>Phishing Website</title>
 
         <link
             href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
@@ -17,7 +17,6 @@ import Header2 from "../components/Header2.astro"
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
     </head>
     <body>
-        <Header2 />
         <slot/>
     </body>
 </html>
