--- a/src/components/Header2.astro
+++ b/src/components/Header2.astro
@@ -1,11 +1,12 @@
 ---
+const { title } = Astro.props;
 ---
 
-<h1 id="header" class="mb-3">Phishing Website</h1>
+<h1 id="header" class="mb-3">{title}</h1>
 
 <style>
     #header {
         text-align: center;
-        padding: 20px
+        padding: 30px
     }
 </style>
